2007-01-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Better title for plots with scans forward and
	backward.

2007-01-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/README: Update documentation of image code fallback to using
	term->filled_polygon() for each pixel if term->image() is not usable.

2007-01-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h src/graphics.c src/graphics.h 
	src/plot2d.c src/plot3d.c src/term_api.h:  Define a struct t_image to
	hold properties associated with any particular image.  We can put one
	of these in each 2D or 3D plot structure, just as we do for other
	specific plot types.  This reduces the number of parameters passed
	down to rendering routines; now they only need a pointer to the one
	structure, in which all other relevant information can be found.

	* docs/gnuplot.doc src/misc.c (get_image_options) src/misc.h: Add an
	image property "failsafe".  This causes the image to be rendered with
	generic rgb rectangles, bypassing any terminal-specific image code.
	This is useful for debugging problems in the customized terminal code,
	e.g.  Bug #1612502

2007-01-16  Ethan Merritt  <merritt@u.washington.edu>

	* term/hp26.trm (BN_create): Use gp_alloc() rather than malloc/calloc.

	* term/hp26.trm term/compact.c term/Makfile.am.in
	term/makefile.amg term/makefile.dj2 term/makefile.unx:
	Remove helper file compact.c from the distribution.  It contains a
	broken file compaction routine that results in segfaults, memory leaks,
	and buffer overflows.  The only caller is hp26.trm, and testing
	indicates that even when the compaction works it only saves about 5%.

	Bug #1540389

2007-01-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_options) term/gd.trm (PNG_options) 
	term/metapost.trm (MP_options) term/tgif.trm (TGIF_options):
	The "set termoption font <foo>" command was intended to allow changing